example の video tag に attribute を追加する

--- a/example/multistream_sendonly.html
+++ b/example/multistream_sendonly.html
@@ -10,7 +10,7 @@
                 <h2>sendonly1</h2>
                 <button id="start-sendonly">start</button>
                 <button id="stop-sendonly">stop</button><br />
-                <video id="sendonly-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                <video id="sendonly-local-video" autoplay="" playsinline="" controls="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
             </div>
         </div>
 
