--- a/example/multistream_sendrecv_e2ee.html
+++ b/example/multistream_sendrecv_e2ee.html
@@ -12,7 +12,7 @@
                     <p>secretKey: MasterKey</p>
                     <button id="start-sendrecv1">start</button>
                     <button id="stop-sendrecv1">stop</button><br />
-                    <video id="sendrecv1-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                    <video id="sendrecv1-local-video" autoplay="" playsinline="" controls="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                     <div id="sendrecv1-remote-videos"></div>
                 </div>
                 <div>
@@ -20,7 +20,7 @@
                     <p>secretKey: MasterKey</p>
                     <button id="start-sendrecv2">start</button>
                     <button id="stop-sendrecv2">stop</button><br />
-                    <video id="sendrecv2-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                    <video id="sendrecv2-local-video" autoplay="" playsinline="" controls="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                     <div id="sendrecv2-remote-videos"></div>
                 </div>
                 <div>
@@ -28,7 +28,7 @@
                     <p>secretKey: AnotherKey</p>
                     <button id="start-sendrecv3">start</button>
                     <button id="stop-sendrecv3">stop</button><br />
-                    <video id="sendrecv3-local-video" autoplay="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
+                    <video id="sendrecv3-local-video" autoplay="" playsinline="" controls="" style="width: 320px; height: 240px; border: 1px solid black;"></video>
                     <div id="sendrecv3-remote-videos"></div>
                 </div>
             </div>
@@ -74,6 +74,8 @@ document.querySelector('#start-sendrecv1').addEventListener('click', function() 
       remoteVideo.id = remoteVideoId;
       remoteVideo.style.border = '1px solid red';
       remoteVideo.autoplay = true;
+      remoteVideo.playsinline = true;
+      remoteVideo.controls = true;
       remoteVideo.width = '160';
       remoteVideo.height = '120';
       remoteVideo.srcObject = stream;
@@ -109,6 +111,8 @@ document.querySelector('#start-sendrecv2').addEventListener('click', function() 
       remoteVideo.id = remoteVideoId;
       remoteVideo.style.border = '1px solid red';
       remoteVideo.autoplay = true;
+      remoteVideo.playsinline = true;
+      remoteVideo.controls = true;
       remoteVideo.width = '160';
       remoteVideo.height = '120';
       remoteVideo.srcObject = stream;
@@ -144,6 +148,8 @@ document.querySelector('#start-sendrecv3').addEventListener('click', function() 
       remoteVideo.id = remoteVideoId;
       remoteVideo.style.border = '1px solid red';
       remoteVideo.autoplay = true;
+      remoteVideo.playsinline = true;
+      remoteVideo.controls = true;
       remoteVideo.width = '160';
       remoteVideo.height = '120';
       remoteVideo.srcObject = stream;
