--- a/example/sendonly_recvonly.html
+++ b/example/sendonly_recvonly.html
@@ -11,17 +11,17 @@
                 <div>
                     <h2>sendonly</h2>
                     <p id="local-video-client-id"></p>
-                    <video id="local-video" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+                    <video id="local-video" autoplay="" playsinline="" controls="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
                 </div>
                 <div>
                     <h2>recvonly1</h2>
                     <p id="remote-video-client-id-1"></p>
-                    <video id="remote-video1" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+                    <video id="remote-video1" autoplay="" playsinline="" controls="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
                 </div>
                 <div>
                     <h2>recvonly2</h2>
                     <p id="remote-video-client-id-2"></p>
-                    <video id="remote-video2" autoplay="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
+                    <video id="remote-video2" autoplay="" playsinline="" controls="" style="width: 400px; height: 300px; border: 1px solid black;"></video>
                 </div>
             </div>
         </div>
