--- a/example/simulcast.html
+++ b/example/simulcast.html
@@ -9,19 +9,19 @@
             <button id="start">start</button>
             <div>
                 <h2>sendonly<span id="local-video-client-id"></span></h2>
-                <video id="local-video" autoplay="" style="width: 320px; height: 180px; border: 1px solid blue;"></video>
+                <video id="local-video" autoplay="" playsinline="" controls="" style="width: 320px; height: 180px; border: 1px solid blue;"></video>
             </div>
             <div>
                 <h2>recvonly low<span id="remote-video-client-id-low"></span></h2>
-                <video id="remote-video-low" autoplay="" style="border: 1px solid red;"></video>
+                <video id="remote-video-low" autoplay="" playsinline="" controls="" style="border: 1px solid red;"></video>
             </div>
             <div>
                 <h2>recvonly middle<span id="remote-video-client-id-middle"></span></h2>
-                <video id="remote-video-middle" autoplay="" style="border: 1px solid red;"></video>
+                <video id="remote-video-middle" autoplay="" playsinline="" controls="" style="border: 1px solid red;"></video>
             </div>
             <div>
                 <h2>recvonly high<span id="remote-video-client-id-high"></span></h2>
-                <video id="remote-video-high" autoplay="" style="border: 1px solid red;"></video>
+                <video id="remote-video-high" autoplay="" playsinline="" controls="" style="border: 1px solid red;"></video>
             </div>
         </div>
 
