--- a/example/simulcast.html
+++ b/example/simulcast.html
@@ -31,9 +31,9 @@ const channelId = 'Sora';
 const debug = false;
 const sora = Sora.connection('ws://localhost:5000/signaling', debug);
 const sendonly = sora.sendonly(channelId, null, { videoCodecType: 'VP8', videoBitRate: 3000, simulcast: true });
-const recvonlyR0 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, SimulcastRid: 'r0' });
-const recvonlyR1 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, SimulcastRid: 'r1' });
-const recvonlyR2 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, SimulcastRid: 'r2' });
+const recvonlyR0 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, simulcastRid: 'r0' });
+const recvonlyR1 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, simulcastRid: 'r1' });
+const recvonlyR2 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, simulcastRid: 'r2' });
 
 document.querySelector('#start').addEventListener('click', function() {
   // sendonly
@@ -52,7 +52,7 @@ document.querySelector('#start').addEventListener('click', function() {
   // recvonly
   recvonlyR0.connect()
     .then(stream => {
-      document.querySelector('#remote-video-client-id-r0').textContent = '(' + recvonlyr0.clientId + ')';
+      document.querySelector('#remote-video-client-id-r0').textContent = '(' + recvonlyR0.clientId + ')';
       document.querySelector('#remote-video-r0').srcObject = stream;
     })
     .catch(e => {
