--- a/example/index.html
+++ b/example/index.html
@@ -14,6 +14,7 @@
             <li><a href="spotlight_sendrecv.html">スポットライト配信視聴サンプル</a></li>
             <li><a href="spotlight_recvonly.html">スポットライト視聴サンプル</a></li>
             <li><a href="simulcast.html">サイマルキャスト配信/視聴サンプル</a></li>
+            <li><a href="messaging_data_channel.html">メッセージングデータチャネルサンプル</a></li>
           </ul>
         </div>
     </body>
