E2EE のサンプルを修正する

--- a/example/index.html
+++ b/example/index.html
@@ -9,7 +9,7 @@
             <li><a href="sendrecv.html">配信視聴サンプル</a></li>
             <li><a href="sendonly.html">配信サンプル</a></li>
             <li><a href="recvonly.html">視聴サンプル</a></li>
-            <li><a href="multistream_sendrecv_e2ee.html">マルチストリームE2EE配信視聴サンプル</a></li>
+            <li><a href="e2ee.html">E2EE配信視聴サンプル</a></li>
             <li><a href="spotlight_sendrecv.html">スポットライト配信視聴サンプル</a></li>
             <li><a href="spotlight_recvonly.html">スポットライト視聴サンプル</a></li>
             <li><a href="simulcast.html">サイマルキャスト配信/視聴サンプル</a></li>
