--- a/example/simulcast.html
+++ b/example/simulcast.html
@@ -30,50 +30,34 @@
 const channelId = 'Sora';
 const debug = false;
 const sora = Sora.connection('ws://localhost:5000/signaling', debug);
-const sendonly = sora.sendonly(channelId, null, { videoCodecType: 'VP8', videoBitRate: 3000, simulcast: true });
-const recvonlyR0 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, simulcastRid: 'r0' });
-const recvonlyR1 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, simulcastRid: 'r1' });
-const recvonlyR2 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, simulcastRid: 'r2' });
+const sendonly = sora.sendonly(channelId, null, { videoCodecType: 'VP8', videoBitRate: 3000, simulcast: true, multistream: true });
+const recvonlyR0 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, multistream: true, simulcastRid: 'r0' });
+recvonlyR0.on('track', (event) => {
+  document.querySelector('#remote-video-client-id-r0').textContent = '(' + recvonlyR0.clientId + ')';
+  document.querySelector('#remote-video-r0').srcObject = event.streams[0];
+});
+const recvonlyR1 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, multistream: true, simulcastRid: 'r1' });
+recvonlyR1.on('track', (event) => {
+  document.querySelector('#remote-video-client-id-r1').textContent = '(' + recvonlyR0.clientId + ')';
+  document.querySelector('#remote-video-r1').srcObject = event.streams[0];
+});
+const recvonlyR2 = sora.recvonly(channelId, null, { videoCodecType: 'VP8', simulcast: true, multistream: true, simulcastRid: 'r2' });
+recvonlyR2.on('track', (event) => {
+  document.querySelector('#remote-video-client-id-r2').textContent = '(' + recvonlyR0.clientId + ')';
+  document.querySelector('#remote-video-r2').srcObject = event.streams[0];
+});
 
-document.querySelector('#start').addEventListener('click', function() {
+document.querySelector('#start').addEventListener('click', async () => {
   // sendonly
-  navigator.mediaDevices.getUserMedia({audio: true, video: {width: {exact: 1280}, height: {exact: 720}}})
-    .then(mediaStream => {
-      sendonly.connect(mediaStream)
-        .then(stream => {
-          document.querySelector('#local-video-client-id').textContent = '(' + sendonly.clientId + ')';
-          document.querySelector('#local-video').srcObject = stream;
-        });
-    })
-    .catch(e => {
-      console.error(e);
-    });
+  const mediaStream = await navigator.mediaDevices.getUserMedia({audio: true, video: {width: {exact: 1280}, height: {exact: 720}}});
+  await sendonly.connect(mediaStream)
+  document.querySelector('#local-video-client-id').textContent = '(' + sendonly.clientId + ')';
+  document.querySelector('#local-video').srcObject = mediaStream;
 
   // recvonly
-  recvonlyR0.connect()
-    .then(stream => {
-      document.querySelector('#remote-video-client-id-r0').textContent = '(' + recvonlyR0.clientId + ')';
-      document.querySelector('#remote-video-r0').srcObject = stream;
-    })
-    .catch(e => {
-      console.error(e);
-    });
-  recvonlyR1.connect()
-    .then(stream => {
-      document.querySelector('#remote-video-client-id-r1').textContent = '(' + recvonlyR1.clientId + ')';
-      document.querySelector('#remote-video-r1').srcObject = stream;
-    })
-    .catch(e => {
-      console.error(e);
-    });
-  recvonlyR2.connect()
-    .then(stream => {
-      document.querySelector('#remote-video-client-id-r2').textContent = '(' + recvonlyR2.clientId + ')';
-      document.querySelector('#remote-video-r2').srcObject = stream;
-    })
-    .catch(e => {
-      console.error(e);
-    });
+  await recvonlyR0.connect();
+  await recvonlyR1.connect();
+  await recvonlyR2.connect();
 });
     </script>
   </body>
