--- a/example/sendrecv.html
+++ b/example/sendrecv.html
@@ -1,6 +1,9 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
+
+        <meta http-equiv="origin-trial" content="AgzZrbX4jBphRIVHd0mDLyV2c3zKrVzGq/wTUydsSAQqv2njX1U5BCFPiKHSvZsS0LXfsGFrZOqil6A9pu+4pQ0AAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2NzUyOTU5OTl9">
+
         <title>Sendrecv test</title>
     </head>
     <body>
