--- a/example/recvonly.html
+++ b/example/recvonly.html
@@ -23,7 +23,8 @@ const channelId = 'Sora';
 const debug = false;
 const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
 const options = {
-  multistream: true
+    multistream: true,
+//    audioCodecType: "LYRA",
 }
 const recvonly = sora.recvonly(channelId, null, options);
 
