--- a/example/e2ee.html
+++ b/example/e2ee.html
@@ -26,7 +26,7 @@
         <script type="text/javascript">
 const channelId = 'Sora';
 const debug = false;
-Sora.initE2EE("https://sora-e2ee-wasm.shiguredo.jp/2020.2/wasm.wasm").catch((e) => {
+Sora.initE2EE("https://sora-e2ee-wasm.shiguredo.app/2020.2/wasm.wasm").catch((e) => {
   document.querySelector("#error-message").textContent = "E2EE用 wasm ファイルの読み込みに失敗しました";
 });
 const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
