--- a/example/sendrecv.html
+++ b/example/sendrecv.html
@@ -1,7 +1,6 @@
 <html lang="ja">
     <head>
       <meta charset="utf-8">
-      <meta http-equiv="origin-trial" content="AgzZrbX4jBphRIVHd0mDLyV2c3zKrVzGq/wTUydsSAQqv2njX1U5BCFPiKHSvZsS0LXfsGFrZOqil6A9pu+4pQ0AAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2NzUyOTU5OTl9">
         <title>Sendrecv test</title>
     </head>
     <body>
@@ -27,16 +26,10 @@
 
         <script src="./sora.js"></script>
         <script type="text/javascript">
-          Sora.initLyra({wasmPath: "https://lyra-wasm.shiguredo.app/2022.2.0/",
-                         modelPath: "https://lyra-wasm.shiguredo.app/2022.2.0/"});
 const channelId = 'Sora';
 const debug = false;
 const sora = Sora.connection('ws://127.0.0.1:5000/signaling', debug);
 const options = {
-    multistream: true,
-    audioCodecType: "LYRA",
-}
-const options2 = {
     multistream: true,
 }
 const sendrecv1 = sora.sendrecv(channelId, null, options);
@@ -65,7 +58,7 @@ sendrecv1.on('removetrack', (event) => {
   }
 });
 
-const sendrecv2 = sora.sendrecv(channelId, null, options2);
+const sendrecv2 = sora.sendrecv(channelId, null, options);
 sendrecv2.on('track', (event) => {
   const stream = event.streams[0];
   if (!stream) return;
